# llm-forge

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_unique_lower_email_username.py  0003_create_datasets_tables.py  0004_create_training_jobs.py  0005_active_job_constraint.py  0005_create_evaluations_table.py  0006_create_model_registry.py  0007_create_deployments.py  0008_create_monitoring_tables.py  __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  datasets.py  deployments.py  evaluations.py  health.py  models.py  monitoring.py  router.py  training_jobs.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/mixins/: __init__.py  timestamp_mixin.py  uuid_mixin.py
backend/app/models/: __init__.py  dataset.py  deployment.py  evaluation.py  model.py  monitoring.py  training_job.py  user.py
backend/app/repositories/: __init__.py  base.py  dataset_repository.py  deployment_repository.py  evaluation_repository.py  model_repository.py  monitoring_repository.py  training_job_repository.py  user_repository.py
backend/app/schemas/: auth.py  common.py  dataset.py  deployment.py  evaluation.py  model.py  monitoring.py  training_job.py
backend/app/services/: __init__.py  auth_service.py  dataset_service.py  deployment_service.py  evaluation_service.py  inference_service.py  metrics.py  model_registry_service.py  monitoring_service.py  queue_service.py  storage_service.py  training_service.py  validation_service.py
backend/app/training/: __init__.py  alpaca_formatter.py  artifact_validator.py  dataset_loader.py  dataset_normalizer.py  model_registry.py  peft_config.py  qlora_config.py  training_args.py
backend/app/workers/: __init__.py  mock_training_runner.py  qlora_training_runner.py
backend/tests/: conftest.py  test_auth.py  test_datasets.py  test_deployments.py  test_evaluations.py  test_health.py  test_models.py  test_monitoring.py  test_security.py  test_training_jobs.py  test_training_module.py
docs/: 00_project_context.md  00_project_vision.md  01_product_requirements.md  02_system_architecture.md  03_database_design.md  04_backend_api_design.md  05_frontend_design.md  06_dataset_service.md  07_training_service.md  08_evaluation_service.md  09_model_registry.md  10_deployment_service.md  11_observability_monitoring.md  12_devops_setup.md  13_implementation_roadmap.md  14_engineering_guardrails.md  14_phase2_dataset_service_handoff.md  14_phase3_handoff_report.md  14_phase_4.2_handoff_report.md  15_phase2_architecture_review.md  15_phase3_architecture_audit.md  16_phase2_1_security_fixes.md  17_architecture_decisions.md  18_phase33_handoff_report.md  18_phase3_training_planning.md  19_phase41_planning_report.md  20_real_training_validation_plan.md  21_phase422_compatibility_review.md  21_phase_4.2.1_handoff_report.md  22_phase43_validation_report.md  23_phase43b_execution_report.md  23_phase5_evaluation_handoff.md  24_phase51_real_evaluation_validation.md  25_phase6_model_registry_handoff.md  26_phase7_deployment_handoff.md
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  (+1 more)
(+157 files in other folders)
