[project]
name = "llm-forge-backend"
version = "0.1.0"
description = "LLM Forge backend API - Phase 1 (database + auth)"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    # Cache / queue
    "redis>=5.2.0",
    # Object storage
    "minio>=7.2.9",
    # MLflow
    "mlflow>=2.18.0",
    # Auth (Phase 1)
    # NOTE: passlib 1.7.4 is unmaintained and incompatible with bcrypt >= 4.1.0.
    # We pin bcrypt to the last compatible 4.0.x release to keep passlib working.
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    # HTTP client
    "httpx>=0.27.2",
    # Logging
    "structlog>=24.4.0",
    # ── Phase 4.1: QLoRA Training Engine ──────────────────────────────────
    # Version choices documented for reproducibility:
    #   torch 2.4+ — stable 4-bit quant support in bitsandbytes
    #   transformers 4.45+ — AutoModelForCausalLM, BitsAndBytesConfig
    #   peft 0.13+ — LoraConfig, get_peft_model, TaskType
    #   trl 0.12+ — SFTTrainer with packing support
    #   bitsandbytes 0.44+ — NF4 quantization, paged optimizers
    #   accelerate 1.0+ — device_map="auto" for model loading
    #   datasets 3.0+ — load_dataset for JSONL
    #   safetensors 0.4+ — safe tensor serialization for adapters
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "bitsandbytes>=0.44.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "safetensors>=0.4.0",
    # ── Phase 5: Evaluation Service ───────────────────────────────────────
    # MVP metrics: ROUGE-L, BERTScore, Semantic Similarity.
    #   rouge-score 0.1+ — stable, Google-maintained ROUGE implementation
    #   bert-score 0.3+ — uses transformers embeddings under the hood
    #   sentence-transformers 2.2+ — all-MiniLM-L6-v2 for semantic similarity
    # All three are imported lazily inside app/services/metrics.py so the
    # backend imports cleanly without them; they are required for real
    # evaluation runs only.
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "sentence-transformers>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.4",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
